--- a/index.html
+++ b/index.html
@@ -110,7 +110,25 @@
       </section>
 
       <!-- SECTION_3 -->
-      <section><div class="container"></div></section>
+      <section id="testimonials">
+        <div class="container">
+          <div class="container">
+            <div class="row">
+              <div class="column">
+                <div class="box">
+                  <p>Testimonials</p>
+                  <h2 class="padding">Strategic Planner</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis atque neque veritatis eius ab? Alias reiciendis doloremque blanditiis, reprehenderit, at debitis perspiciatis quisquam maxime repudiandae molestiae, magni qui ad adipisci!</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="img/testimonial1.jpg" alt="">
+                <h2 class="padding">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!"</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section><div class="container"></div></section>
       <section><div class="container"></div></section>
       <section><div class="container"></div></section>
