--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
       <!-- SECTION_3 -->
       <section id="testimonials">
         <div class="container">
-          <div class="container">
-            <div class="row">
+          <div class="row">
               <div class="column">
                 <div class="box">
                   <p>Testimonials</p>
@@ -126,10 +125,31 @@
                 <h2 class="padding">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!"</h2>
               </div>
             </div>
-          </div>
+
+            <div class="row">
+              <div class="card">
+                <img src="img/testimonial2.jpg" alt="">
+                <h2 class="padding">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!"</h2>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="card">
+                <img src="img/testimonial3.jpg" alt="">
+                <h2 class="padding">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!"</h2>
+              </div>
+            </div>
         </div>
       </section>
-      <section><div class="container"></div></section>
+
+      <!-- SECTION_4 -->
+      <section>
+        <div class="container">
+
+        </div>
+      </section>
+
+      <!-- SECTION_5 -->
       <section><div class="container"></div></section>
       <section><div class="container"></div></section>
     </main>
