--- a/index.html
+++ b/index.html
@@ -144,12 +144,7 @@
 
       <!-- SECTION_4 -->
       <section>
-        <div class="container">
-
-        </div>
-      </section>
-
-      <!-- SECTION_5 -->
+        <div class="container"></div></section>
       <section><div class="container"></div></section>
       <section><div class="container"></div></section>
     </main>
