--- a/index.html
+++ b/index.html
@@ -143,9 +143,46 @@
       </section>
 
       <!-- SECTION_4 -->
-      <section>
-        <div class="container"></div></section>
-      <section><div class="container"></div></section>
+      <section id="benefits">
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              <h2>Benefits of working whit us</h2>
+              <div class="card card--white">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam molestias tempora quasi magni maxime perspiciatis nemo quisquam neque eos quos nostrum, expedita corporis aliquid alias tenetur autem velit. Magnam, minima!</p>
+              </div>
+
+              <div class="card card--white">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam molestias tempora quasi magni maxime perspiciatis nemo quisquam neque eos quos nostrum, expedita corporis aliquid alias tenetur autem velit. Magnam, minima!</p>
+              </div>
+
+              <div class="card card--white">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam molestias tempora quasi magni maxime perspiciatis nemo quisquam neque eos quos nostrum, expedita corporis aliquid alias tenetur autem velit. Magnam, minima!</p>
+              </div>
+
+              <div class="card card--white">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam molestias tempora quasi magni maxime perspiciatis nemo quisquam neque eos quos nostrum, expedita corporis aliquid alias tenetur autem velit. Magnam, minima!</p>
+              </div>
+
+              <div class="card card--white">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam molestias tempora quasi magni maxime perspiciatis nemo quisquam neque eos quos nostrum, expedita corporis aliquid alias tenetur autem velit. Magnam, minima!</p>
+              </div>
+
+              
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="about-us">
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              
+            </div>
+          </div>
+        </div>
+      </section>
       <section><div class="container"></div></section>
     </main>
     <!-- /MAIN -->
