section about us

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
 
           <div class="menu">
-            <i class="fa-solid fa-bars fa-2x"></i>
+            <i class="fa-solid fa-bars"></i>
             <ul>
               <li>link 1</li>
               <li>link 1</li>
@@ -178,6 +178,18 @@
         <div class="container">
           <div class="row">
             <div class="column">
+              <h2>About Us</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aspernatur dolore ab, dicta eaque natus consectetur reprehenderit voluptatem iure at, voluptates inventore pariatur libero, iusto fugiat laborum saepe similique laboriosam.</p>
+              <br>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aspernatur dolore ab, dicta eaque natus consectetur reprehenderit voluptatem iure at, voluptates inventore pariatur libero, iusto fugiat laborum saepe similique laboriosam.</p>
+              <div class="about-img">
+                <img src="img/about.jpg" alt="">
+                <i class="fa-solid fa-quote-left"></i>
+                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis quod voluptates excepturi aliquam necessitatibus possimus minus </h2>
+                <div class="button button--purple">
+                  <p>Find me on Linkedin</p>
+                </div>
+              </div>
               
             </div>
           </div>
