fine struttura ultima section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,22 @@
           </div>
         </div>
       </section>
-      <section><div class="container"></div></section>
+
+
+      <section class="get-started">
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              <p>Get Started</p>
+              <h2>Simply, transparent price</h2>
+              <h2>It's free</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores autem rerum dicta sunt incidunt quisquam enim? Est libero, excepturi</p>
+              <p class="button button--white">Get Started</p>
+              
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- /MAIN -->
     <!-- FOOTER -->
