--- a/index.html
+++ b/index.html
@@ -90,23 +90,21 @@
 
       <!-- SECTION_2 -->
       <section id="strategic-planner">
-        <div class="container">
-          <div class="row">
-            <div class="column">
-              <div class="card">
+        <div class="container column">
+              <div class="img-woman">
                 <img src="img/planning1.png" alt="image">
                 <h2 class="padding">Strategic Planner</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis atque neque veritatis eius ab? Alias reiciendis doloremque blanditiis, reprehenderit, at debitis perspiciatis quisquam maxime repudiandae molestiae, magni qui ad adipisci!</p>
               </div>
-            </div>
+            
             <div class="card">
               <img src="img/planning2.png" alt="">
               <h2 class="padding">Development</h2>
               <p class="padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!</p>
               <i class="fa-solid fa-arrow-down padding"></i>
             </div>
-          </div>
         </div>
+        
       </section>
 
       <!-- SECTION_3 -->
