--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis atque neque veritatis eius ab? Alias reiciendis doloremque blanditiis, reprehenderit, at debitis perspiciatis quisquam maxime repudiandae molestiae, magni qui ad adipisci!</p>
                 </div>
               </div>
-              <div class="card">
+              <div class="card direction-row">
                 <img src="img/testimonial1.jpg" alt="">
                 <h2 class="padding">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!"</h2>
               </div>
             </div>
 
             <div class="row">
-              <div class="card">
+              <div class="card direction-row">
                 <img src="img/testimonial2.jpg" alt="">
                 <h2 class="padding">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!"</h2>
               </div>
             </div>
 
             <div class="row">
-              <div class="card">
+              <div class="card direction-row">
                 <img src="img/testimonial3.jpg" alt="">
                 <h2 class="padding">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus dolores labore expedita architecto minima, eligendi doloribus adipisci culpa amet? Quasi sint, corporis culpa aperiam harum sit quas accusamus delectus!"</h2>
               </div>
