--- a/index.html
+++ b/index.html
@@ -218,16 +218,18 @@
         </div>
       </section>
 
-
-      <section class="get-started">
+         <!-- GET STARTED -->
+      <section id="get-started">
         <div class="container">
           <div class="row">
             <div class="column">
-              <p>Get Started</p>
-              <h2>Simply, transparent price</h2>
-              <h2>It's free</h2>
+              <p>GET STARTED</p>
+              <h2>SIMPLY, TRANSPARENT PRICING</h2>
+              <h2 id="yellow">It's Free</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores autem rerum dicta sunt incidunt quisquam enim? Est libero, excepturi</p>
-              <p class="button button--white">Get Started</p>
+              <div class="bottone">
+                <a href="#"><p class="bottone bottone--txt" >Find me on Linkedin</p></a>
+              </div>
               
             </div>
           </div>
